--- a/README
+++ b/README
@@ -8,9 +8,7 @@ Unzip the distribution archive into GATE/plugins or to the directory of your cho
 
 Usage
 The plugins contains 3 Processing resources :
-- TrainingCorpusCreator : generates a lexicon + raw file in the specified directory. See https://code.google.com/p/textclassification/ for instructions on 
-how to generate a vector file and model from a raw file.
+- TrainingCorpusCreator : generates a lexicon + raw file + training vector in the specified directory. See https://code.google.com/p/textclassification/ for instructions on 
+how to generate a model file using the base text classification API or http://www.csie.ntu.edu.tw/~cjlin/libsvm/ on how to use directly the libsvm tools over the vector file.
 - ClassifierPR : takes a model and lexicon to classify the annotations specified in textAnnotationType
 - NGram maker : generates ngrams that can be used as input for the corpus generation or classification
-
-
